css/logo-nav.css
/* ... */
.navbar-brand {
    height: 60px;
    overflow: hidden;
}

/* Small devices (tablets, 768px and up) */
@media(min-width:768px) {

    .container {
        margin-left:10px;
        margin-right:10px;
        width: 100%;
    }

    .navbar-right {
        margin-right: 10px;
    }



    .navbar-fixed-top .navbar-brand {
        padding: 15px 0;
    }
    .tab {
        text-align: center;
    }
    .navbar-toggle {
        margin-top: 20px;
    }

}

@media (max-width: 768px) {




    p {
        font-size: 16px;
        font-weight: 400;
        line-height: 1.25em;
    }
    h4 {
        font-size: 18px;
        font-weight: 500;
        line-height: 1.11em;
    }
    h3 {
        font-size: 22px;
        font-weight: 500;
        line-height: 1.136em;
    }
    h2 {
        font-size: 26px;
        font-weight: 500;
        line-height: 1.153em;
    }
    h1 {
        font-size: 32px;
        font-weight: 500;
        line-height: 1.25em;
    }
    .nav>li>a {
        letter-spacing: 1px;
        padding-left: 16px;
        padding-right: 16px;
    }
    .navbar-header {
        margin-bottom: 0;
    }
    .navbar-toggle {
        padding-top: 10px;
    }
    .navbar-logo {
        height: 40px;
        margin-top: 6px;
    }
    .companies li {
        width: 30%;
    }
    body {
        padding-top: 50px;
    }
    .jumbotron {
        margin-right: 5%;
    }
    .jupytercon-jumbotron {
        margin-right: 0px;
    }
}

/* Extra small devices (these are mostly fixes to make sure elements act correctly to look good) */
@media(max-width:509px) {
    .install-button {
        margin-top: 20px;
    }
    .items {
        min-height:0;
        padding:10px;
    }
    .follow {
        float: none;
        display: block;
        margin: 0 auto;
    }
    .footer {
        padding-bottom: 15px;
        text-align: center;
    }
    .con-subtitle {
        font-size: 20px
    }
}

@media(max-width: 992px) {
    .navbar-brand {
       width: 30px;
    }

    .con-container {
        background-image: url('../assets/jupytercon-ny.png');
        background-repeat: no-repeat;
        background-size: cover;
        min-height: 500px;
        text-align: right;
    }
    .con-subtitle {
        color: #FFFFFF;
        font-weight: 400;
    }
}

@media(max-width: 768px) {
    .con-copy {
        height: auto;
        width: auto;
    }
    .con-big-copy {
        height: auto;
        width: auto;
    }
}

